@@ -12,6 +12,7 @@ import java.awt.Graphics2D;
 import java.awt.image.BufferedImage;
 import java.io.File;
 import java.io.IOException;
+import java.util.Arrays;
 import java.util.List;
 
 public class BarcodeGenerator {
@@ -50,12 +51,16 @@ public class BarcodeGenerator {
     }
 
     public static void main(String[] args) {
-        // Example usage
-        /*List<String> texts = List.of(
-            "0123456789012-S-Red",
-            "0123456789012-M-Red",
-            "0123456789012-L-Red"
-            // Add more texts as needed
+ 
+        List<String> texts = Arrays.asList(
+                "0123456789012-S-Red",
+                "0123456789012-M-Red",
+                "0123456789012-L-Red",
+                "0787099257798-32-Black",
+                "0787099257798-34-Black",
+                "0787099257798-32-Gray"
+        // Add more texts as needed
+
         );
         String outputDir = "output"; // Directory to save the barcode images
         int width = 300; // Width of the barcode image
@@ -64,6 +69,6 @@ public class BarcodeGenerator {
         // Ensure the output directory exists
         new File(outputDir).mkdirs();
 
-        generateBarcodes(texts, outputDir, width, height);*/
+        generateBarcodes(texts, outputDir, width, height);
     }
 }
